build: add --sun-misc-unsafe-memory-access=allow argument to JVM configuration